fixed instrumenation initialization