@@ -3,10 +3,10 @@ package io.spotnext.instrumentation.internal;
 import java.lang.instrument.ClassFileTransformer;
 import java.lang.instrument.Instrumentation;
 import java.lang.reflect.Method;
-import java.util.ArrayList;
-import java.util.List;
 
-import io.spotnext.instrumentation.DynamicInstrumentationLoader;
+import org.apache.commons.lang3.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 // @Immutable
 /**
@@ -17,6 +17,8 @@ import io.spotnext.instrumentation.DynamicInstrumentationLoader;
  * @since 1.0
  */
 public final class DynamicInstrumentationAgent {
+
+	private static final Logger LOG = LoggerFactory.getLogger(DynamicInstrumentationAgent.class);
 
 	private DynamicInstrumentationAgent() {
 	}
@@ -33,21 +35,25 @@ public final class DynamicInstrumentationAgent {
 	public static void premain(final String args, final Instrumentation inst)
 			throws Exception {
 
-		final ClassLoader agentClassLoader = AgentClassLoaderReference
-				.getAgentClassLoader();
-		final Class<?> agentInstrumentationInitializer = agentClassLoader
-				.loadClass(
-						DynamicInstrumentationAgent.class.getPackage().getName()
-								+ ".AgentInstrumentationInitializer");
-		final Method initializeMethod = agentInstrumentationInitializer
-				.getDeclaredMethod("initialize", String.class,
-						Instrumentation.class);
+		try {
+			final ClassLoader agentClassLoader = AgentClassLoaderReference
+					.getAgentClassLoader();
+			final Class<?> agentInstrumentationInitializer = agentClassLoader
+					.loadClass(DynamicInstrumentationAgent.class.getPackage().getName() + ".AgentInstrumentationInitializer");
+			final Method initializeMethod = agentInstrumentationInitializer.getDeclaredMethod("initialize", String.class,
+					Instrumentation.class);
 
-		for (final ClassFileTransformer t : loadClassTransformers()) {
-			inst.addTransformer(t);
+			String transformers = System.getProperty("transformers");
+
+			if (StringUtils.isNotBlank(transformers)) {
+				LOG.debug("Registering class transformers: " + transformers);
+
+				loadClassTransformers(transformers, inst);
+			}
+			initializeMethod.invoke(null, args, inst);
+		} catch (Exception e) {
+			LOG.error("Could not initialize instrumentation", e);
 		}
-
-		initializeMethod.invoke(null, args, inst);
 	}
 
 	/**
@@ -66,20 +72,19 @@ public final class DynamicInstrumentationAgent {
 	}
 
 	/**
-	 * Instantiate the {@link ClassFileTransformer}s registered in {@link DynamicInstrumentationLoader#getRegisteredTranformers()}.
-	 *
-	 * @param <T> a T object.
-	 * @return a {@link java.util.List} object.
-	 * @throws IllegalAccessException
-	 * @throws InstantiationException
+	 * Parses the comma-separated list of transformers and instantiate them. Then they are added to the instrumentation.
+	 * 
+	 * @param transformersProperty the command separated list of transformers
+	 * @param instrumentation      instance
+	 * @throws Exception
 	 */
-	protected static <T extends ClassFileTransformer> List<T> loadClassTransformers() throws InstantiationException, IllegalAccessException {
-		final List<T> transformers = new ArrayList<>();
-
-		for (Class<? extends ClassFileTransformer> t : DynamicInstrumentationLoader.getRegisteredTranformers()) {
-			transformers.add((T) t.newInstance());
+	protected static void loadClassTransformers(String transformersProperty, Instrumentation instrumentation) throws Exception {
+		if (transformersProperty != null) {
+			for (String t : transformersProperty.split(",")) {
+				t = t.trim();
+				final ClassFileTransformer trans = (ClassFileTransformer) Class.forName(t).getDeclaredConstructor().newInstance();
+				instrumentation.addTransformer(trans);
+			}
 		}
-
-		return transformers;
 	}
 }
